--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Bienvenue sur mon site</h1>
-  <img src="mon-image2" alt="Mon Image">
+  <img src="mon-image2" alt="lourd.webp">
 </body>
 </html>
